fix the overflow

--- a/src/app/landing-page/about-me/about-me.component.scss
+++ b/src/app/landing-page/about-me/about-me.component.scss
@@ -128,6 +128,7 @@
 @media screen and (max-width: 680px) and (max-height: 1000px) {
     .aboutMeContainer {
         padding-top: 360px;
+        padding-bottom: 80px;
     }
 }
 
