--- a/src/app/landing-page/header/header.component.scss
+++ b/src/app/landing-page/header/header.component.scss
@@ -452,7 +452,8 @@ header {
     }
 
     .spreads {
-        width: 150vw;
+        width: 100vw;
+        top: 82px;
     }
 
     #curveImg{
@@ -466,17 +467,12 @@ header {
 }
 
 
-// @media screen and (max-width: 1100px) and (max-height: 860px) {
-//     .textMain {
-//         padding-top: 170px;
-//     }
-// }
-
 @media screen and (max-width: 1100px) and (max-height: 860px) {
     .textMain {
         padding-top: 240px;
     }
 }
+
 
 @media screen and (max-width: 1100px) and (max-height: 700px) {
     .textMain {
