--- a/src/app/landing-page/my-skills/my-skills.component.scss
+++ b/src/app/landing-page/my-skills/my-skills.component.scss
@@ -142,7 +142,8 @@
     }
 
     .mainSkillCt {
-        padding-top: 120px;
+        padding-top: 80px;
+        padding-bottom: 80px;
         padding-left: 40px;
         padding-right: 40px;
     }
