--- a/src/app/landing-page/portfolio-projects/portfolio-projects.component.scss
+++ b/src/app/landing-page/portfolio-projects/portfolio-projects.component.scss
@@ -6,6 +6,7 @@
     flex-direction: column;
     overflow-x: hidden;
     overflow-y: hidden;
+    padding-top: 80px;
     .portfolioHeadline {
         @include allCenter();
         flex-direction: column;
