--- a/src/app/landing-page/portfolio-projects/projects/projects.component.scss
+++ b/src/app/landing-page/portfolio-projects/projects/projects.component.scss
@@ -100,7 +100,7 @@
         align-items: center;
         gap: 35px;
         padding-top: 100px;
-        padding-bottom: 100px;
+        padding-bottom: 120px;
         position: relative;
         z-index: 2;
     }
